[WIP][memory-vis] Add memory grid and fix scrollbar

--- a/src/renderer/static/css/main.css
+++ b/src/renderer/static/css/main.css
@@ -75,7 +75,7 @@ body {
     padding: 5px;
     padding-top: 15px;
     padding-left: 10px;
-    padding-right: 10px;
+    /* padding-right: 10px; */
     background-color: #f5f5f5fa;
 }
 
