--- a/src/renderer/static/css/memory-vis.css
+++ b/src/renderer/static/css/memory-vis.css
@@ -16,6 +16,7 @@
 }
 
 #memory-area-body {
+    width: 100%;
     height: 100%;
 }
 
@@ -24,9 +25,9 @@
     background-color: transparent;
 }
 
-#memory-area-body .simplebar-track.simplebar-vertical {
+/* #memory-area-body .simplebar-track.simplebar-vertical {
     right: -10px;
-}
+} */
 
 /********************/
 /********************/
@@ -36,8 +37,10 @@
 
 .memory-vis {
     margin-top: 4px;
+    margin-right: 4px;
     margin-bottom: 4px;
     border-radius: 4px;
+    width: 99% !important;
     border: none;
     border-left: 6px solid grey;
 }
@@ -230,12 +233,21 @@
  ** BODY
  **/
 .memory-vis-body {
-    height: 100px;
-    /* max-height: none;
-    overflow: hidden; */
+    width: 100%;
+    padding-right: 4px;
+    max-height: 300px;
+    overflow: auto;
     will-change: transform;
     /* contain: content;
     animation-name: verticalExpand;
     animation-duration: 1000ms;
     animation-timing-function: step-end; */
+}
+
+
+/**
+ ** Grid
+ **/
+.memory-vis-grid {
+    width: 100%;
 }
